Add needed files, create cannon and projectile class

--- a/Pif-Paf.vcxproj
+++ b/Pif-Paf.vcxproj
@@ -19,11 +19,17 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\Cannon\Cannon.cpp" />
     <ClCompile Include="src\Main.cpp" />
-    <ClCompile Include="src\Render.cpp" />
+    <ClCompile Include="src\Projectile\Projectile.cpp" />
+    <ClCompile Include="src\Render\Render.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\Render.h" />
+    <ClInclude Include="src\Cannon\Cannon.h" />
+    <ClInclude Include="src\Globals.h" />
+    <ClInclude Include="src\Projectile\Projectile.h" />
+    <ClInclude Include="src\Render\Render.h" />
+    <ClInclude Include="src\Vec2.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
